# Python_Web_Programming

./: README.md
Django_Programming/pybo/: .gitignore  pyproject.toml
Django_Programming/pybo/common/: urls.py  views.py
Django_Programming/pybo/config/: settings.py  urls.py
Django_Programming/pybo/pybo_app/: apps.py  forms.py  models.py  urls.py  views.py
Django_Programming/pybo/pybo_app/migrations/: 0001_initial.py  0002_question_author.py  0003_answer_author.py  0004_answer_modify_date_question_modify_date.py  0005_answer_voter_question_voter_alter_answer_author_and_more.py
Django_Programming/pybo/pybo_app/templatetags/: pybo_filter.py
Django_Programming/pybo/templates/: base.html  navbar.html
Django_Programming/pyboard/be/: db.sqlite3  pyproject.toml  requirements.txt
Django_Programming/pyboard/be/config/: settings.py  urls.py
Django_Programming/pyboard/be/posts/: models.py  serializers.py  views.py
Django_Programming/pyboard/be/posts/migrations/: 0001_initial.py  0002_alter_post_likes.py  0003_comment.py
Django_Programming/pyboard/be/users/: serializers.py  views.py
Django_Programming/pyboard/be/users/migrations/: 0001_initial.py
Django_Programming/pyboard/fe/: index.html  package-lock.json  package.json  vite.config.js
Django_Programming/pyboard/fe/src/: index.js
Django_Programming/pytodo/pytodo_app/: db.sqlite3  pyproject.toml
Django_Programming/tdd/: db.sqlite3  pyproject.toml
Django_Programming/tdd/api/: models.py  tests.py  urls.py  views.py
Django_Programming/tdd/config/: settings.py
Hands_on_Django/: main.py  pyproject.toml
(+41 files in other folders)
